--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="icon" type="image/x-icon" href="./src/assets/img/favicon.ico" />
   </head>
   <body class="max-w-screen-2xl box-border">
+
+    <!-- Vue + Vite App -->
     <div id="app"></div>
+
+    <!-- Script App JS -->
     <script type="module" src="/src/main.js"></script>
+
   </body>
 </html>
